development efforts to provide robust boundary representation (BREP)
NURBS import and ray tracing support.  Our NURBS capability gets us a
step closer to full hybrid representation modeling, supporting
seamless transitioning and mixing of boundary representation geometry
(e.g., NURBS or polygonal meshes) with implicit representation
geometry (e.g., primitives with CSG).

* mass-deprecation of 121 command-line utilities - BRL-CAD Developers
* improved hierarchy preservation in 3dm-g importer - Jon Engbert
* fixed upside down 'screengrab' images on some platforms - Nick Reed
* updated wireframe drawing to respect primitive colors - Cliff Yapp
* updated pixdiff & pixcmp to only compare same sizes - Cliff Yapp
* fixed running archer from read-only filesystems - Cliff Yapp
* fixed patch-g tool and E command infinite loop bug - Sean Morrison
* improved NMG ray tracing fault tolerance - Sean Morrison
* fixed color preservation issue with 3dm-g importer - Jon Engbert
* added csg implicit hierarchy conversion to brep command - Cliff Yapp
* fixed crash in clone when told to make zero copies - Cliff Yapp
* fixed crash in search when using -above option - Cliff Yapp
* extended nirt to list current and available formats - Sean Morrison
* fixed NURBS wireframe drawing crash - Cliff Yapp
* fixed firing of single rays using the rtshot tool - Sean Morrision
* improved rcodes command feedback in the no changes case - Cliff Yapp
* added brlman -S option to specify man page section  - Cliff Yapp
* modified rtg3 to avoid outputting excessive LOS - Nick Gerstner
* extended burst and rtg3 to output 5 digit ID numbers - Nick Gerstner
* improved draw command manual page documenation - Cliff Yapp
* added lc -m option to report multi-material/los regions - Cliff Yapp
* added new 'icv' image conversion tool w/ pix, bw, dpix, png, ppm
	- Mohit Daga, Cliff Yapp, Sean Morrison, Erik Greenwald
* ported 'burst' tool (batch mode only) to Windows - Cliff Yapp