@@ -1,0 +1,63 @@
+<refentry xmlns="http://docbook.org/ns/docbook" version="5.0" xml:id="lt">
+
+  <refmeta>
+    <refentrytitle>LT</refentrytitle>
+    <manvolnum>nged</manvolnum>
+    <refmiscinfo class="source">BRL-CAD</refmiscinfo>
+    <refmiscinfo class="manual">BRL-CAD User Commands</refmiscinfo>
+  </refmeta>
+
+  <refnamediv xml:id="name">
+    <refname>lt</refname>
+    <refpurpose>Generates a list of the child objects of a combination.</refpurpose>
+  </refnamediv>
+
+  <!-- body begins here -->
+  <refsynopsisdiv xml:id="synopsis">
+    <cmdsynopsis sepchar=" ">
+      <command>lt</command>
+      <arg choice="opt" rep="norepeat"><replaceable>char</replaceable></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsection xml:id="description"><title>DESCRIPTION</title>
+
+  <para>
+    The <command>lt</command> command generates a list of the children found
+    in a combination object specified by the user.  By default it will print
+    a curly bracket bound set of objects and their boolean flags.  If the <option>-c</option>
+    option is specified, it will instead use the character supplied to the <option>-c</option>
+    option as the separator in the list of objects.  In the latter mode the
+    boolean flags will not be printed.
+  </para>
+  </refsection>
+
+  <refsection xml:id="examples"><title>EXAMPLES</title>
+
+  <example><title>Tcl Output</title>
+  <literallayout class="normal">
+mged&gt; lt component
+{u bed} {u frame} {u cab} {u suspension} {u misc} {u power.train}
+  </literallayout>
+  </example>
+
+  <example><title>CSV Output</title>
+  <literallayout class="normal">
+mged&gt; lt -c , component
+bed,frame,cab,suspension,misc,power.train
+  </literallayout>
+  </example>
+  </refsection>
+
+  <refsection xml:id="author"><title>AUTHOR</title>
+  <para>BRL-CAD Team</para>
+  </refsection>
+
+  <refsection xml:id="bug_reports"><title>BUG REPORTS</title>
+
+  <para>
+    Reports of bugs or problems should be submitted via electronic
+    mail to &lt;devs@brlcad.org&gt;, or via the "cadbug.sh" script.
+  </para>
+  </refsection>
+</refentry>
