@@ -27,6 +27,8 @@ seamless transitioning and mixing of boundary representation geometry
 (e.g., NURBS or polygonal meshes) with implicit representation
 geometry (e.g., primitives with CSG).
 
+* added manual page for lt comb child listing command - Cliff Yapp
+* added lt -c option for specifying separation character - Bob Parker
 * mass-deprecation of 121 command-line utilities - BRL-CAD Developers
 * improved hierarchy preservation in 3dm-g importer - Jon Engbert
 * fixed upside down 'screengrab' images on some platforms - Nick Reed
